# enterprise-knowledgeops-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: main.py
dashboard/: api_client.py  evaluation_formatting.py  feedback_summary.py  streamlit_app.py
dashboard/pages/: 1_Document_Ingestion.py  2_Knowledge_Explorer.py  3_Graph_Explorer.py  4_Query_Planner.py  5_Evaluation_Dashboard.py  6_Feedback_Governance.py
data/processed/: cross-border-data-policy-v1-0.json  customer-complaint-escalation-sop-v1-0.json  data-security-ai-tool-policy-v1-0.json  employee-onboarding-sop-v1-0.json  hr-leave-policy-v1-0.json  it-incident-escalation-sop-v1-0.json  travel-reimbursement-policy-v1-0.json  vendor-payment-approval-policy-v1-0.json
data/raw/: cross_border_data_policy.md  customer_complaint_escalation_sop.md  data_security_ai_tool_policy.md  employee_onboarding_sop.md  hr_leave_policy.md  it_incident_escalation_sop.md  travel_reimbursement_policy.md  vendor_payment_approval_policy.md
docs/: api.md  architecture.md  demo.md  evaluation.md  final_checklist.md  implementation_notes.md  portfolio_summary.md  studio.md
docs/releases/: v1.0.0-portfolio.md  v1.2.0-phase9b-readiness.md
evaluation/datasets/: phase2_retrieval_cases.json  phase6_eval_cases.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/scripts/: capture-studio-screenshots.mjs
frontend/src/: App.tsx  (+2 more)
scripts/: demo_mvp0_check.py  ingest_sample_docs.py  rebuild_graph.py  rebuild_indexes.py  run_phase6_eval.py  run_retrieval_eval.py
(+110 files in other folders)
