[project]
name = "enterprise-knowledgeops-copilot"
version = "0.1.0"
description = "Local-first enterprise KnowledgeOps and GraphRAG portfolio platform."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "chromadb>=1.0",
  "fastapi>=0.115",
  "httpx>=0.28",
  "numpy>=1.24",
  "streamlit>=1.55",
  "uvicorn>=0.34",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
